--- a/.gitignore
+++ b/.gitignore
@@ -279,3 +279,12 @@ app.*.symbols
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 !/dev/ci/**/Gemfile.lock
+
+
+
+**/windows/
+**/android/
+**/ios/
+**/linux/
+**/macos/
+**/web/
