--- a/Flutter/app17_pokedex/pubspec.yaml
+++ b/Flutter/app17_pokedex/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   dio: ^5.1.1
+  flutter_screenutil: ^5.7.0
+  google_fonts: ^4.0.3
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +63,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  assets:
+    - assets/pokeball.png
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
